# Dynamics_of_Topological_Photonics

./: .gitignore  Diamond 2nd-Order Time Evolution.py  Diamond Model.py  Diamond Site Intensities.py  NRSSH 2nd-Order Time Evolution.py  NRSSH Final State.py  NRSSH Model.py  README.md  RESULTS.md  THEORY.md  pyproject.toml
.github/workflows/: ci.yml
diamond/: eigenenergies.py  final_states.py  model.py  phase_diagrams.py  site_intensities.py  time_evolution.py
example_tests/diamond_examples/: diamond_eigenenergies.py  diamond_eigenvectors.py  diamond_first_moments.py  diamond_last_moments.py  diamond_phases.py  diamond_site_intensities.py
example_tests/nrssh_examples/: nrssh_eigenenergies.py  nrssh_eigenvectors.py  nrssh_first_moments.py  nrssh_last_moments.py  nrssh_phases.py  nrssh_site_intensities.py
examples/diamond_examples/: diamond_eigenenergies.py  diamond_eigenvectors.py  diamond_first_moments.py  diamond_last_moments.py  diamond_phases.py
examples/nrssh_examples/: nrssh_eigenenergies.py  nrssh_eigenvectors.py  nrssh_first_moments.py  nrssh_last_moments.py  nrssh_phases.py
nrssh/: eigenenergies.py  final_states.py  model.py  phase_diagrams.py  site_intensities.py  time_evolution.py
src/analysis/: diamond_phase_diagrams.py  nrssh_phase_diagrams.py
src/dynamics/: diamond_gain_loss.py  diamond_gammas.py  diamond_time_evolution.py  nrssh_gain_loss.py  nrssh_gammas.py  nrssh_time_evolution.py
src/models/: diamond.py  diamond_lattice.py  nrssh.py  nrssh_lattice.py
tests/: test_models_and_phases.py
topological_photonics/: __init__.py  plotting.py
(+14 files in other folders)
