[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-of-topological-photonics"
version = "0.1.0"
description = "Tools for simulating topological photonic lattices with nonlinear saturable gain and loss."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Sid Richards" },
]
dependencies = [
    "matplotlib",
    "numpy",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["topological_photonics", "topological_photonics.*"]
